--- a/notebooks/IO Python.ipynb
+++ b/notebooks/IO Python.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[b'total 328\\n', b'-rw-r--r--  1 noahgift  staff  20612 Nov 27 16:16 Functional_Introduction_To_Python_Section_1(Introductory_Concepts).ipynb\\n', b'-rw-r--r--  1 noahgift  staff  30980 Nov 27 11:16 Functional_Introduction_To_Python_Section_2(Functions).ipynb\\n', b'-rw-r--r--  1 noahgift  staff  11068 Nov 21 14:49 Functional_Introduction_To_Python_Section_3(Control_Structures).ipynb\\n', b'-rw-r--r--  1 noahgift  staff   9467 Nov 22 14:21 Functional_Introduction_To_Python_Section_4(Intermediate_Topics).ipynb\\n', b'-rw-r--r--  1 noahgift  staff   3601 Nov 29 09:01 IO Python.ipynb\\n', b'-rw-r--r--  1 noahgift  staff  64300 Nov 27 14:19 class1_scratchpad.ipynb\\n', b'-rw-r--r--  1 noahgift  staff   1059 Nov 28 08:40 class2_scratchpad.ipynb\\n', b'-rw-r--r--  1 noahgift  staff    664 Nov 29 08:24 class3_scratchpad.ipynb\\n', b'-rw-r--r--  1 noahgift  staff      3 Nov 29 08:29 workfile.txt\\n', b'-rw-r--r--  1 noahgift  staff     22 Nov 29 08:49 workfile2.txt\\n']\n"
+      "[b'total 368\\n', b'-rw-r--r--  1 noahgift  staff  20612 Nov 27 16:16 Functional_Introduction_To_Python_Section_1(Introductory_Concepts).ipynb\\n', b'-rw-r--r--  1 noahgift  staff  30980 Nov 27 11:16 Functional_Introduction_To_Python_Section_2(Functions).ipynb\\n', b'-rw-r--r--  1 noahgift  staff  11068 Nov 21 14:49 Functional_Introduction_To_Python_Section_3(Control_Structures).ipynb\\n', b'-rw-r--r--  1 noahgift  staff   9467 Nov 22 14:21 Functional_Introduction_To_Python_Section_4(Intermediate_Topics).ipynb\\n', b'-rw-r--r--  1 noahgift  staff  10792 Nov 29 10:26 IO Python.ipynb\\n', b'-rw-r--r--  1 noahgift  staff  64300 Nov 27 14:19 class1_scratchpad.ipynb\\n', b'-rw-r--r--  1 noahgift  staff   1059 Nov 28 08:40 class2_scratchpad.ipynb\\n', b'-rw-r--r--  1 noahgift  staff    664 Nov 29 08:24 class3_scratchpad.ipynb\\n', b'-rw-r--r--  1 noahgift  staff     20 Nov 29 10:15 data.json\\n', b'-rw-r--r--  1 noahgift  staff     14 Nov 29 10:21 data.yaml\\n', b'-rw-r--r--  1 noahgift  staff     32 Nov 29 10:05 mydictionary.pickle\\n', b'-rw-r--r--  1 noahgift  staff      3 Nov 29 10:39 workfile.txt\\n', b'-rw-r--r--  1 noahgift  staff     22 Nov 29 10:39 workfile2.txt\\n']\n"
      ]
     }
    ],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,14 +313,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--  1 noahgift  staff  32 Nov 29 10:05 mydictionary.pickle\r\n"
+      "-rw-r--r--  1 noahgift  staff  32 Nov 29 10:39 mydictionary.pickle\r\n"
      ]
     }
    ],
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
